Fix spacing and sizing of Badge and Badge Content (#13648)
* Minor style fixes from 15626

* Add gap to badge link

--- a/src/amo/components/Badge/styles.scss
+++ b/src/amo/components/Badge/styles.scss
@@ -8,9 +8,10 @@ $badge-size-small: 16px;
   font-size: $font-size-default;
   line-height: $line-height-compressed;
   display: flex;
+  gap: 6px;
   align-items: center;
   white-space: nowrap;
-  padding: 3px 6px 3px 3px;
+  padding: 4px 6px;
 
   .Badge-link {
     color: inherit;
@@ -19,6 +20,7 @@ $badge-size-small: 16px;
     flex-grow: 0;
     flex-shrink: 0;
     text-decoration: none;
+    gap: 6px;
 
     &,
     &:link,
@@ -40,6 +42,7 @@ $badge-size-small: 16px;
     border: 1px solid $color-light-gray-40;
     border-radius: 20px;
     display: inline-flex;
+    gap: 6px;
     box-sizing: border-box;
 
     &:hover,
@@ -63,16 +66,12 @@ $badge-size-small: 16px;
   }
 }
 
-.Badge-icon + .Badge-content {
-  @include margin-start(6px);
-}
-
 .Badge-content--small {
   font-size: 12px;
 }
 
 .Badge-content--large {
-  font-size: $badge-size-large;
+  font-size: 16px;
 }
 
 .Badge-icon {
